Fix cutoff project pictures

--- a/wp-content/themes/WPSeed/assets/styles/general.scss
+++ b/wp-content/themes/WPSeed/assets/styles/general.scss
@@ -234,7 +234,7 @@ a {
     }
     .slide-inner {
       background-size: cover;
-      min-height: 35vw;
+      min-height: 27.25vw;
     }
   }
 
